Version 1.129 (27 Jan 03)
- Fix mistakes in Regular documentation.

Version 1.128 (22 Jan 03)
- MipsPro didn't like the changes for newer GCC.
  Change this->enum to Tr_Base::...

Version 1.127 (20 Jan 03)
- Change Construct_direction_of_line_3 to the non-deprecated
  Construct_direction_3.
- Better support newer GCC.

Version 1.126 (14 Jan 03)
- Fix documentation.
- Add new test code.

Version 1.125 (14 Jan 03)
- template ctor added to all triangulation classes taking an iterator range
  over points.
- Regular_3 now hides vertices (and updates itself) when inserting a coinciding
  point with greater weight.  This required a new predicate.
- Add tds.delete_vertices(first, last).

Version 1.124 (13 Dec 02)
- Geomview_stream output operator uses the new gv.draw_triangles() function.

Version 1.123 (10 Dec 02)
- Give non-const access to .tds().

Version 1.122 (10 Dec 02)
- Delaunay perturbation order is now lexicographic, nor insertion order.

Version 1.121 (27 Nov 02)
- Move explicit instantiation in test_delaunay_3 after main() to please MipsPro.

Version 1.120 (21 Oct 02)
- Shorten some mangled name to please some platforms.
- Please valgrind.

Version 1.119 (9 Oct 02)
- Valgrind noticed that copy_tds() touched pointers of index > dimension().
- undocument set_number_of_vertices(), and deprecate it.
- Remove _number_of_vertices, since DS_Container now counts.
- Fix MipsPro failures.

Version 1.118 (30 Aug 02)
- Derive from Quadruple.  This cuts the template chain, which helps VC++7.

Version 1.117 (27 Aug 02)
- Changed typedef for Cell_handle and Vertex_handle in TDS_3
  following a workaround in Trivial_iterator.h for MSC

Version 1.116 (5 Aug 02)
- replace Pointer by CGAL_COMPARABLE_ITERATOR_CHECKER( *) for 
  Vertex_handle and Cell_handle in TDS
- Remove src/Triangulation_3.C .
- Remove deprecated functions incident_vertices() and indicent_cells()
  taking std::set & as argument.
- Explicit instantiation of the big classes in the test-suite.
