@@ -124,12 +124,8 @@ However, when dealing with Delaunay triangulations, the case of such
 polyhedra that cannot be retriangulated cannot happen, so \cgal\
 proposes a vertex removal.
 
-\ccMethod{bool remove(Vertex_handle v);}
-{Removes the vertex \ccc{v} from the triangulation and returns
-\ccc{true}. It returns false if something went wrong, and in this case
-the triangulation is not modified; this should not happen, but may
-happen in denegerate cases if the predicates are not exact (which can
-occur with a \cgal\ kernel if the arithmetic chosen is not good).
+\ccMethod{void remove(Vertex_handle v);}
+{Removes the vertex \ccc{v} from the triangulation.
 \ccPrecond{\ccc{v} is a vertex of the triangulation and it is not the
 infinite vertex.}}
 
