@@ -1,5 +1,7 @@
 Version 1.129 (27 Jan 03)
 - Fix mistakes in Regular documentation.
+- Delaunay_3::remove() now returns void.
+  (bool is not needed anymore since it always works now)
 
 Version 1.128 (22 Jan 03)
 - MipsPro didn't like the changes for newer GCC.
